--- a/src/styles/Products.css
+++ b/src/styles/Products.css
@@ -1,31 +1,59 @@
 /* src/styles/Products.css */
 
-.products-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center; /* Centra los elementos horizontalmente */
-  text-align: center;
-  padding: 20px; /* Ajusta el espacio alrededor del contenedor */
-}
-
 .product-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 10px;
-  justify-content: center;
+  justify-content: center; /* Centrar los productos */
+  gap: 20px; /* Añadir un espacio entre los productos */
 }
 
 .product {
-  border: 1px solid #ccc;
+  border: 1px solid #050505;
   padding: 10px;
   text-align: center;
-  width: 200px;
+  width: 200px; /* Ajustar el ancho del producto según tu preferencia */
+  margin: 10px; /* Añadir margen entre los productos */
 }
 
 .product img {
   max-width: 100%;
-  height: auto;
+  height: auto; /* Hacer que las imágenes mantengan la proporción */
 }
 
+.product button {
+  border: none; /* Cambiado de 'border' a 'none' */
+  border-radius: 8px;
+  padding: 0.8em 1.5em;
+  font-size: 1em;
+  font-weight: 600;
+  font-family: 'Inter', sans-serif;
+  background-color: orangered;
+  color: black;
+  cursor: pointer;
+  transition: background-color 0.3s, transform 0.2s;
+  height: 2.5em;
+  margin-top: auto;
+}
+
+.product button:hover {
+  background-color: #e60000;
+  transform: scale(1.05);
+}
+
+.product button:focus,
+.product button:focus-visible {
+  outline: none;
+  box-shadow: 0 0 0 4px #ff5555;
+}
+
+@media (prefers-color-scheme: light) {
+  .product button {
+    background-color: #cc3333;
+  }
+
+  .product button:hover {
+    background-color: #b30000;
+  }
+}
 
 
